--- a/VideoPlay/VideoPlay.ui
+++ b/VideoPlay/VideoPlay.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>275</width>
-    <height>236</height>
+    <width>620</width>
+    <height>398</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,30 +16,47 @@
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <layout class="QVBoxLayout" name="verticalLayout_2" stretch="1,1,0,0">
+     <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,0,0">
       <item>
-       <widget class="QPushButton" name="pushButton_ChooseVideo">
+       <widget class="QLabel" name="label_VideoView">
         <property name="text">
-         <string>ChooseVideo</string>
+         <string>VideoView</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="label_SpeedMod">
-        <property name="text">
-         <string>SpeedMod:</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QSpinBox" name="spinBox_Speed">
-        <property name="minimum">
-         <number>-10</number>
-        </property>
-        <property name="maximum">
-         <number>10</number>
-        </property>
-       </widget>
+       <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,1,1">
+        <item>
+         <widget class="QPushButton" name="pushButton_ChooseVideo">
+          <property name="text">
+           <string>ChooseVideo</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_SpeedMod">
+          <property name="text">
+           <string>SpeedMod:</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QSpinBox" name="spinBox_Speed">
+          <property name="minimum">
+           <number>-10</number>
+          </property>
+          <property name="maximum">
+           <number>10</number>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
       <item>
        <widget class="QPushButton" name="pushButton_Exit">
@@ -57,7 +74,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>275</width>
+     <width>620</width>
      <height>23</height>
     </rect>
    </property>
